# noisecut

./: LICENSE  README.md  ncut.py  pyproject.toml
examples/: example_add_compiler.py
noisecut/: __init__.py  __main__.py  cli.py  grouper.py  model.py  reporter.py  severity.py  utils.py
noisecut/parsers/: __init__.py  avr_gcc.py  base.py  builtin.py  clang.py  dotnet.py  factory.py  gcc.py  registry.py  rust.py
tests/: README.md  test_dotnet_parser.py  test_features.py  test_grouper.py  test_message_formatters.py  test_ncut.py  test_path_normalization.py  test_severity.py  test_utils.py
tests/samples/: avr_gcc_build.txt  clang_errors.txt  clang_make_apertus.txt  duplicate_headers.txt  gcc_multiple_errors.txt  gcc_warnings.txt  large_firmware_build.txt  qt_moc_build.txt  rust_errors.txt  rust_errors_02.txt  rust_errors_03.txt
