[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noisecut"
version = "0.4.2"
description = "Cut through compiler noise. See what really matters."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "aklen", email = "hamoriakos@gmail.com"}
]
keywords = [
    "C++", "C", "build-tools", "compiler-diagnostics", "clang", "gcc",
    "build-log-analysis", "warning-aggregation", "developer-tooling",
    "CI", "command-line-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ncut = "noisecut.cli:main"

[project.urls]
Homepage = "https://github.com/aklen/noisecut"
Repository = "https://github.com/aklen/noisecut"
Issues = "https://github.com/aklen/noisecut/issues"
